<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Scanner Control</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Scanner Control</string>
    <string name="home_list_content_desc">Right Chevron</string>
    <string-array name="home_items">
        <item>Devices</item>
        <item>Connection Help</item>
        <item>Application Settings</item>
        <item>About</item>

    </string-array>
    <string-array name="scanner_configs">
        <item>Set Factory Defaults</item>
        <item>Battery Off</item>
        <item>Cradle Host</item>
        <item>SPP Client</item>
        <item>SPP Server</item>
        <item>HID Server</item>
        <item>Low Beeper Volume</item>
        <item>Medium Beeper Volume</item>
        <item>High Beeper Volume</item>
    </string-array>
    <string-array name="beeper_actions">
        <item>One high short beep</item>
        <item>Two high short beeps</item>
        <item>Three high short beeps</item>
        <item>Four high short beeps</item>
        <item>Five high short beeps</item>
        <item>One low short beep</item>
        <item>Two low short beeps</item>
        <item>Three low short beeps</item>
        <item>Four low short beeps</item>
        <item>Five low short beeps</item>
        <item>One high long beep</item>
        <item>Two high long beeps</item>
        <item>Three high long beeps</item>
        <item>Four high long beeps</item>
        <item>Five high long beeps</item>
        <item>One low long beep</item>
        <item>Two low long beeps</item>
        <item>Three low long beeps</item>
        <item>Four low long beeps</item>
        <item>Five low long beeps</item>
        <item>Fast warble beep</item>
        <item>Slow warble beep</item>
        <item>High-low beep</item>
        <item>Low-high beep</item>
        <item>High-low-high beep</item>
        <item>Low-high-low beep</item>
        <item>High-high-low-low beep</item>
    </string-array>
    <string-array name="vibration_durations">
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>750</item>
    </string-array>
    <string name="menu_item_device_disconnect">Disconnect Scanner</string>
    <string name="menu_item_device_pair">Pair Bluetooth Scanner</string>
    <string name="title_activity_about">App Overview</string>
    <string name="version">Version</string>
    <string name="version_info">Zebra Scanner Control Application v1.0\n\n©2025 Zebra Technologies Corp. and/or its affiliates.  All rights reserved.\n</string>
    <string name="title_activity_scanners">Available Device List</string>
    <string name="title_activity_beacon">Zebra Beacons</string>
    <string name="bt_scanners_not_found">BT scanners not found</string>
    <string name="bt_no_scanners">No scanner found.</string>
    <string name="menu_firmware_help">Firmware update help</string>
    <string name="menu_virtual_tether_help">Virtual Tether help</string>
    <string name="menu_add_scanner">Refresh device list</string>
    <string name="menu_beacon_filter">Beacon Filter</string>
    <string name="menu_get_pairing_barcode">Get Pairing Barcode</string>
    <string name="menu_refresh_scanners">Refresh</string>
    <string name="title_activity_scanner_configurations">Connection Help</string>
    <string name="title_activity_settings">App Settings</string>
    <string name="scanner_detection_title">Scanner Detection</string>
    <string name="scanner_discovery_title">Bluetooth Scanner Discovery</string>
    <string name="scanner_filteration_title">Classic mode Scanner Filtration</string>
    <string name="other_settings_title">Other Settings</string>
    <string name="auto_detection">Auto Detection</string>
    <string name="auto_connection">Auto Connect To Last BLE Scanner</string>
    <string name="discover_bluetooth_scanners">Discover Bluetooth Scanners</string>
    <string name="set_sms_dir_path">SMS folder location</string>
    <string name="filter_zebra_devices">Filter Zebra Devices</string>
    <string name="exceptions_throw">Throw Exceptions</string>
    <string name="add_customized_friendly_name">Add customized friendly name</string>
    <string name="pairing_barcode_title">Pair New Scanner (STC) Barcode</string>
    <string name="pairing_barcode_type">Barcode Type</string>
    <string name="pairing_barcode_configuration">Set Factory Defaults</string>
    <string name="reset_app_defaults">Reset App Defaults</string>
    <string name="btn_reset_factory_defaults">Reset Defaults</string>
    <string name="events_title">Background Notifications</string>
    <string name="available_scanner">Available Scanner</string>
    <string name="active_scanner">Active Scanner</string>
    <string name="assertinfo">Asset Information</string>
    <string name="barcode_event">Barcode Event</string>
    <string name="image_event">Image Event</string>
    <string name="video_event">Video Event</string>
    <string name="background_mode_title">BACKGROUND MODE</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="notifications_title">NOTIFICATIONS</string>
    <string name="title_activity_battery_off">Battery Off</string>
    <string name="battery_off_content_desc">Barcode to be scanned</string>
    <string name="battery_off_text">Scan the presented barcode to configure [battery off] mode</string>
    <string name="no_items">No Items</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="paired_devices_title">Selected Scanners</string>
    <string name="available_readers_title">Available Readers</string>
    <string name="none_paired">No Devices Paired</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_barcode">BarcodeActivity</string>
    <string name="title_activity_zxing_barcode">ZxingBarcodeActivity</string>
    <string name="title_activity_active_scanner">Active Scanner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Disconnect">Disconnect</string>
    <string name="info_title">INFORMATION</string>
    <string name="title_activity_beeper_actions">Beeper Settings</string>
    <string name="title_activity_led">LED Control</string>
    <string name="title_activity_assert">Active Scanner</string>
    <string name="title_activity_symbologies">Symbology Settings (ON/OFF)</string>
    <string name="title_activity_beeper_settings">Beeper Settings</string>
    <string name="title_activity_splash_screen">Splash</string>
    <string name="title_activity_available_scanner">Available Scanner</string>
    <string name="title_activity_barcode_details">Barcode Details</string>
    <string name="title_activity_navigate_scan_speed_analytics">Scan Speed Analytics(SSA)</string>
    <string name="title_activity_slowest_decode_image_settings">Slowest Decode Image Settings</string>
    <string name="title_activity_scan_speed_analytics">Scan Speed Analytics</string>
    <string name="title_activity_ssa_barcode_type">Barcode Type For SSA</string>
    <string name="connect_title">Connect</string>
    <string name="ok">OK</string>
    <string name="txt_continue">CONTINUE</string>
    <string name="launch_instruction">This app supports Scan-To-Connect technology for 1-step pairing. </string>
    <string name="launch_instruction_item_2">•         \tEnable / disable symbologies</string>
    <string name="launch_instruction_item_1">•         \tProgram beeper and LEDs</string>
    <string name="launch_instruction_item_3">•         \tRemotely trigger a scan</string>
    <string name="launch_instruction_remaining">It displays scanned bar code data.</string>
    <string name="launch_instruction_remaining_2">It can query scanner asset information &amp; battery health statistics.</string>
    <string name="dont_show_this_again">Don\'t show this message again.</string>
    <string name="launch_instruction2">It allows you to control your scanner:</string>
    <string name="supported_scanners_title">The following scanners can be used with this application:</string>
    <string name="title_activity_supported_scanners_cordless_1">Cordless (</string>
    <string name="title_activity_supported_scanners_cordless_2"> > Pair New Bluetooth)</string>
    <string name="title_activity_supported_scanners_corded_1">Corded Scanners* (</string>
    <string name="title_activity_supported_scanners_corded_2"> > Find Cabled Scanner)</string>
    <string name="details_activity_supported_scanners_corded">* For corded scanner support a fully powered USB Master Port is required</string>
    <string name="supported_scanners_li3678">•         \tLI3678</string>
    <string name="supported_scanners_rfd8500">•         \tRFD8500</string>
    <string name="supported_scanners_ds3678">•         \tDS3678</string>
    <string name="supported_scanners_cs4070">•         \tCS4070 (Rev E firmware and newer)</string>
    <string name="supported_scanners_ds8178">•         \tDS8178</string>
    <string name="supported_scanners_ds2278">•         \tDS2278</string>
    <string name="supported_scanners_cs6080">•         \tCS6080</string>
    <string name="supported_scanners_rs5100">•         \tRS5100</string>
    <string name="supported_scanners_mp6000">•         \tMP6000</string>
    <string name="supported_scanners_mp7000">•         \tMP7000</string>
    <string name="supported_scanners_mx101">•         \tMP6/7000 and MX101</string>
    <string name="supported_scanners_ds8178_mp6010">•         \tMP6/7000 and DS8178 via CR8178</string>
    <string name="supported_scanners_ds3608">•         \tDS3608</string>
    <string name="supported_scanners_ds8108">•         \tDS8108</string>
    <string name="supported_scanners_ds9808">•         \tDS9808</string>
    <string name="supported_scanners_ds4308">•         \tDS4308</string>
    <string name="supported_scanners_ds2208">•         \tDS2208</string>
    <string name="supported_scanners_ds7708">•         \tDS7708</string>
    <string name="supported_scanners_ls2208">•         \tLS2208 (MFD > 1/2015)</string>
    <string name="supported_scanners_se4757">•         \tSE4757</string>
    <string name="rfd8500_pairing_instructions_title">RFD8500 Pairing instructions</string>
    <string name="rfd8500_pairing_instructions_1">1.\tTurn the RFD8500 on and ensure Bluetooth is enabled.</string>
    <string name="rfd8500_pairing_instructions_2">2.\tEnable Bluetooth on the Android device.</string>
    <string name="rfd8500_pairing_instructions_3">3.\tThe Android device will discover the RFD8500 and display it on the Bluetooth Devices list.</string>
    <string name="rfd8500_pairing_instructions_1_1">•\tThe RFD8500 is discoverable over Bluetooth for 40 seconds after start up. After that time Bluetooth suspends and is no longer discoverable. To make discoverable again, press the Bluetooth button, located on side of RFD8500.</string>
    <string name="rfd8500_pairing_instructions_4">4.\tTap the “RFD8500” to initiate pairing from the Bluetooth Devices list.</string>
    <string name="rfd8500_pairing_instructions_5">5.\tPress the RFD8500 trigger to complete pairing when the Bluetooth LED starts flashing fast.</string>
    <string name="rfd8500_pairing_instructions_6">6.\tLaunch the “Scanner Control” app / Menu / “Available Device List” and select the RFD8500.</string>
    <string name="multiple_dat_files">Multiple DAT files</string>
    <string name="multiple_dat_files_msg_1">Multiple DAT files found in Download folder. Please keep only one DAT file and try again.</string>
</resources>