<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginTop="25dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/launch_instruction" />
            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/launch_instruction2" />

            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/launch_instruction_item_1" />

            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/launch_instruction_item_2" />

            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/launch_instruction_item_3" />

            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/launch_instruction_remaining" />

            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/launch_instruction_remaining_2" />

            <CheckBox
                android:id="@+id/chk_dont_show"
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="-7dp"
                android:text="@string/dont_show_this_again" />

            <TextView
                android:id="@+id/btn_continue"
                style="@style/roboto_medium_16dp_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:clickable="true"
                android:gravity="right"
                android:text="@string/txt_continue"
                android:paddingLeft="@dimen/app_margin_right"
                android:paddingTop="@dimen/app_margin_right"
                android:paddingRight="@dimen/app_margin_right"
                android:paddingBottom="30dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>