<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/app_margin_left"
    android:paddingLeft="@dimen/app_margin_left"
    android:paddingRight="@dimen/app_margin_right"
    android:paddingTop="@dimen/app_margin_left"
    tools:context="com.zebra.scannercontrol.app.activities.PairingInstructionsRFD8500">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/roboto_medium_16dp_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/rfd8500_pairing_instructions_title" />
            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/rfd8500_pairing_instructions_1" />
            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:text="@string/rfd8500_pairing_instructions_1_1" />
            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/rfd8500_pairing_instructions_2" />

            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/rfd8500_pairing_instructions_3" />
            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/rfd8500_pairing_instructions_4" />
            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/rfd8500_pairing_instructions_5" />
            <TextView
                style="@style/roboto_regular_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/rfd8500_pairing_instructions_6" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
